feat: add AppRouter

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
-.errorButton {
+.basicBlock {
+  display: flex;
+}
+
+.errorButton,
+.buttonAboutUs {
   border: none;
   display: flex;
   background-color: rgb(46, 204, 40);
@@ -9,4 +14,14 @@
   margin: auto;
   align-items: center;
   justify-content: center;
+  margin-top: 10px;
+}
+
+.searchBlockComponent {
+  margin: auto;
+}
+
+.buttonAboutUs {
+  background-color: rgb(134, 219, 23);
+  width: 100px;
 }
